[package]
name = "match_self"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = 'Rust macro for the common "x = match x {" pattern'
documentation = "https://docs.rs/match_self"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
